// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GCP Cloud Run 1`] = `
Object {
  "hostname": "testhost",
  "message": "hello",
  "pid": 1337,
  "severity": "WARNING",
  "time": "2009-02-13T23:31:30.000Z",
}
`;

exports[`GCP Cloud Run Error Object 1`] = `
Object {
  "hostname": "testhost",
  "message": "Ded 1",
  "pid": 1337,
  "severity": "ERROR",
  "stack_trace": "Error: Ded 1
    at Object.<anonymous> (/srv/test/__tests__/gcp.test.ts:18:18)
    at Object.asyncJestTest (/srv/test/node_modules/jest-jasmine2/build/jasmineAsyncInstall.js:106:37)
    at /srv/test/node_modules/jest-jasmine2/build/queueRunner.js:45:12
    at new Promise (<anonymous>)
    at mapper (/srv/test/node_modules/jest-jasmine2/build/queueRunner.js:28:19)
    at /srv/test/node_modules/jest-jasmine2/build/queueRunner.js:75:41",
  "time": "2009-02-13T23:31:30.000Z",
  "type": "Error",
}
`;

exports[`GCP Cloud Run Fatal with Error Object 1`] = `
Object {
  "@type": "type.googleapis.com/google.devtools.clouderrorreporting.v1beta1.ReportedErrorEvent",
  "hostname": "testhost",
  "pid": 1337,
  "severity": "CRITICAL",
  "stack_trace": "Error: Ded 2
    at Object.<anonymous> (/srv/test/__tests__/gcp.test.ts:27:25)
    at Object.asyncJestTest (/srv/test/node_modules/jest-jasmine2/build/jasmineAsyncInstall.js:106:37)
    at /srv/test/node_modules/jest-jasmine2/build/queueRunner.js:45:12
    at new Promise (<anonymous>)
    at mapper (/srv/test/node_modules/jest-jasmine2/build/queueRunner.js:28:19)
    at /srv/test/node_modules/jest-jasmine2/build/queueRunner.js:75:41",
  "time": "2009-02-13T23:31:30.000Z",
}
`;
